# gs-fastcopy-python

./: README.md  pyproject.toml  requirements.txt
gs_fastcopy/: __init__.py
test/: test_read.py  test_write.py
